# ludwig

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: rust.yml
docs/specs/: atomic-state-writes.spec.md  canonical-direction.spec.md  mcp-path-confinement.spec.md  property-invariants-deferred.spec.md  property-invariants-verified.spec.md  verify-isolates-nested-cargo.spec.md
src/: catalog.rs  drift.rs  error.rs  game.rs  lib.rs  main.rs  mcp.rs  parser.rs  plan.rs  project.rs  prompts.rs  scaffold.rs  skill.rs  util.rs  verify.rs
src/adapters/: mod.rs  rust.rs
src/spec/: behavior.rs  document.rs  example.rs  frontmatter.rs  gherkin_step.rs  invariant.rs  mod.rs
tests/: drift.rs  judgment.rs  mcp.rs  parser.rs  parser_fuzz.proptest-regressions  parser_fuzz.rs  plan.rs  project.rs  smoke.rs  verify.rs
tests/common/: mod.rs
tests/fixtures/specs/invalid/: active_with_open_questions.spec.md  missing_section.spec.md  mixed_classifiers.spec.md  out_of_order.spec.md
tests/fixtures/specs/valid/: minimal.spec.md  token_bucket.spec.md
