[package]
name = "ludwig"
version = "0.1.0"
edition = "2024"
description = "Specification-driven development framework for LLM coding agents (Rust port)."
license = "MIT"

[[bin]]
name = "ludwig"
path = "src/main.rs"

[lib]
name = "ludwig"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
regex = "1"
walkdir = "2"
thiserror = "2"
anyhow = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]

