[package]
name = "ludwig"
version = "0.1.0"
edition = "2024"
# Pinned MSRV: edition 2024 needs >=1.85, and `Project::mutate_state` uses
# std's `File::lock`/`unlock` (stabilized in 1.89). CI builds against this.
rust-version = "1.89"
description = "Specification-driven development framework for LLM coding agents."
license = "MIT"

[[bin]]
name = "ludwig"
path = "src/main.rs"

[lib]
name = "ludwig"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# serde_yaml 0.9 is unmaintained/deprecated; serde_yaml_ng is the maintained
# API-compatible fork. Renamed to `serde_yaml` so call sites stay unchanged.
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
sha2 = "0.10"
regex = "1"
walkdir = "2"
thiserror = "2"
anyhow = "1"
time = { version = "0.3", features = ["formatting"] }
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"
